login page and ability to log in added

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <!-- Loop over each user object -->
+<a href="/login">login</a>
 {{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
