--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
 <!-- Loop over each user object -->
 <a href="/login">login</a>
+<a href="/events">see events</a>
+<a href="/signup">sign up</a>
 {{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
