--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -2,10 +2,10 @@
 {{#each events as |event|}}
 <section class="events">
   <div class="events">
-    <h3 id="eventName">Name: {{event.event_name}}</h3>
-    <p id="eventDate">Date: {{event.event_date}}</p>
-    <p id="eventLoco">Location: {{event.event_location}}</p>
-    <p id="eventDesc">Description: {{event.event_description}}</p>
+    <h3 id="eventName" class="events">Name: {{event.event_name}}</h3>
+    <p id="eventDate" class="events">Date: {{event.event_date}}</p>
+    <p id="eventLoco" class="events">Location: {{event.event_location}}</p>
+    <p id="eventDesc" class="events">Description: {{event.event_description}}</p>
   </div>
 </section>
 {{/each}}
