--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,14 @@
 <div>
     <form id="signupForm">
-        <div>
+        <div class="inputs">
             <label for="name">Name:</label>
             <input name="name" id="signupName">
         </div>
-         <div>
+         <div class="inputs">
             <label for="email">Email:</label>
             <input name="email" id="signupEmail">
         </div>
-         <div>
+         <div class="inputs">
             <label for="password">Password:</label>
             <input name="password" type="password" id="signupPassword">
         </div>
