--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,4 +3,4 @@
     <input type="password" id="passwordInput" placeholder="Enter Password"/>
     <button type="submit" id="loginBtn">submit</button>
 </form>
-<script src="./js/login.js"></script>
+<script src="./public/js/login.js"></script>
