--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Registry</title>
   <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="style.css"
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <h1>
       User Registry
     </h1>
-    <button id="logoutbtn"></button>
+    <button id="logoutbtn">Logout</button>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
