--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Registry</title>
   <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="style.css"
 </head>
 
 <body>
@@ -13,6 +14,7 @@
     <h1>
       User Registry
     </h1>
+    <button id="logoutbtn">Logout</button>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
@@ -20,6 +22,23 @@
   <footer>
       
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function()
+    {
+      $('#logoutbtn').on('click',function()
+      {
+        $.post('/logout',function(response){
+          
+        if(response.success) {
+          window.location.href='/login';
+        } else {
+          console.log('Logout failed.');
+        }
+      });
+    });
+  });
+  </script>
 </body>
 
 </html>
