--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Default</title>
+  <title>User Registry</title>
+  <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,6 +14,7 @@
       User Registry
     </h1>
     <button id="logoutbtn"></button>
+    <button id="logoutbtn">Logout</button>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
@@ -39,5 +40,4 @@
   });
   </script>
 </body>
-
 </html>
