minor changes and working sign up

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Loop over each user object -->
-<a href="/login&logout">login</a>
+<a href="/login">login</a>
 <a href="/events">see events</a>
 <a href="/signup">sign up</a>
 {{#each users as |user| }}
