some more styles for the events page

--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,40 @@ color:#fff;
 padding: 10px;
 text-align: center;
 }
+
+.events {
+    display: flex;
+    padding: 5px;
+    font-size: 12px;
+
+}
+
+#eventName {
+   color: white;
+   background-color: black;
+}
+
+#eventDate {
+    color: white;
+    background-color: black;
+ }
+
+ #eventLoco {
+    color: white;
+    background-color: black;
+ }
+
+#eventDesc {
+    color: white;
+    background-color: black;
+ }
+
+ .inputs{
+    display: flex;
+    padding: 5px;
+ }
+
+ .login {
+    display: flex;
+    padding: 5px;
+ }
